--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* text-align: center; */
 }
+
+.main_screen {
+  width: 90%;
+  height: 600px;
+  background-color: aqua;
+}
+
+
+
+
+@media only screen and (min-width: 600px) {
+  .main_screen {
+    width: 80%;
+  }}
+@media only screen and (min-width: 800px) {
+  .main_screen {
+    width: 70%;
+  }}
+@media only screen and (min-width: 1000px) {
+  .main_screen {
+    width: 60%;
+  }}
+@media only screen and (min-width: 1600px) {
+  .main_screen {
+    width: 50%;
+  }}
