--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,59 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* text-align: center; */
+  background-color: #283054;
+}
+
+div.start {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #283054;
+  width: 100vw;
+  height: 100vh;
+}
+
+button.start {
+  position: absolute;
+  background-color: #f05078;
+  color: white;
+  border: 0;
+  font: bold 40px 'Courier New', Courier, monospace;
+  width: 300px;
+  height: 200px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+  border-radius: .5rem;
+  z-index: 1;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+.flex_row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.score_div {
+  background-color: #f05078;
+  color: white;
+  border-radius: .5rem .5rem 0 0;
 }
 
 .main_screen {
   width: 90%;
-  height: 600px;
-  background-color: aqua;
+  height: 60%;
+  background-color: white;
+  border-radius: .5rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
